# CVUT

FEL-KO/Test/: callcenter.lp  main.cpp  test.sh
FEL-LUP/01 Light up/: input.txt  main.py
FEL-LUP/02 Term Rewriting System/: debug.pl  main.pl
FEL-MAS/02 Bandits/: Makefile  main.cpp
FEL-OPT/01 Kelímek/: plot1.m  plot2.m  povrch.m  povrch_min.m
FEL-OPT/02 Gong/: generate_M.m  generate_values.m  mplot.m  my_inversion.m  solve_ls.m
FEL-OPT/03 Quadratic placement/: qplace_data.m  view_layout.m
FEL-OPT/04 Volby/: ukol_1.m  ukol_2.m  volby_2017.mat
FEL-OPT/05 Motion capture/: approximation.m  show_motion.m  show_motion2.m  ukol_1.m  ukol_2_2.m  ukol_2_3.m
FEL-OPT/06 Iterační metody/: derive_gx.m  dist.m  enter_points.m  fit_circle.m  graphs.m  plot_graph.m  points.mat
FEL-OPT/07 LP/: data1.mat  ukol_1_1.m  ukol_1_2.m  ukol_2_1.m
FEL-PAL/00 Fence/: in.txt  main.cpp
FEL-PAL/01 Maximum spanning tree/: Edge.cpp  Graph.cpp  Node.cpp  Span.cpp  main.cpp  test.sh
FEL-PAL/03 Molecules/: main.cpp  test.sh
FEL-PAL/04 BudWord/: in.txt  main.cpp  test.sh
FEL-PAL/05 Trains/: in.txt  main.cpp  test.sh
FEL-PAL/Zkouška/: main.cpp
FEL-PJC/00 K-Means/: Brewfile  CMakeLists.txt  Configuration.cpp  Configuration.hpp  README.md  main.cpp
FEL-PJC/00 K-Means/input/: 01-02
FEL-PJC/01 List/: Makefile  list.cpp  main.cpp  test-helpers.cpp  tests-list-02.cpp
FEL-PJC/02 Symcalc/: CMakeLists.txt  Makefile  app.cpp  expr.cpp  (+5 more)
FEL-PPC/: .gitignore
FIT-PDP/: .gitignore  README.md
FIT-PJS/: events.html  index.php  pjs10-udalosti.html  pjs10.html
FIT-RUB/: .gitignore
(+2391 files in other folders)
